<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button android:id="@+id/button"
        android:background="#fff4c536"
        android:layout_width="187.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="85.0dip"
        android:layout_marginRight="220.0dip"
        android:layout_marginBottom="553.0dip"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button android:id="@+id/button2"
        android:background="#fff4c536"
        android:layout_width="187.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="220.0dip"
        android:layout_marginTop="85.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginBottom="553.0dip"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button android:id="@+id/button6"
        android:background="#fff4c536"
        android:layout_width="187.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="220.0dip"
        android:layout_marginTop="539.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginBottom="99.0dip"
        android:text="@string/button6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button android:id="@id/button5"
        android:background="#fff4c536"
        android:layout_width="187.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="539.0dip"
        android:layout_marginRight="220.0dip"
        android:layout_marginBottom="99.0dip"
        android:text="@string/button5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button android:id="@+id/button4"
        android:background="#fff4c536"
        android:layout_width="187.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="220.0dip"
        android:layout_marginTop="304.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginBottom="334.0dip"
        android:text="@string/button4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button android:id="@+id/button3"
        android:background="#fff4c536"
        android:layout_width="187.0dip"
        android:layout_height="93.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="304.0dip"
        android:layout_marginRight="220.0dip"
        android:layout_marginBottom="334.0dip"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>